[package]
name = "rust-ors-proxy"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust proxy for the Open Responses Specification (ORS), bridging modern clients to legacy Chat Completion providers."
license = "MIT"
repository = "https://github.com/mrorigo/rust-ors-proxy"
readme = "README.md"
keywords = ["ors", "proxy", "openai", "agent", "spec"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
dotenvy = "0.15"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
async-stream = "0.3.6"
tokio-stream = { version = "0.1.18", features = ["net"] }
bytes = "1.11.0"
